--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <!-- Hero Section -->
     <section id="hero" class="scroll-snap-section flex flex-col md:flex-row items-center justify-between px-6 md:px-16 py-12 md:py-0 bg-gradient-to-b from-[#f0fdf4] to-[#dcfce7]">
         <div class="md:w-1/2 mb-10 md:mb-0">
-            <!-- Logo placeholder -->
-            <div class="mb-6 h-[50px] w-[200px] bg-neutral-200 flex items-center justify-center rounded">
-                <img src="/assets/novaryd-logo.svg" alt="NovaRyd Logo" class="h-[50px] w-auto" width="200" height="50">
+            <!-- Logo -->
+            <div class="mb-6">
+                <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[50px] w-auto" width="200" height="50">
             </div>
             
             <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Zero-Emission Rides for a Greener Mumbai</h1>
@@ -89,9 +89,9 @@
         </div>
         
         <div class="md:w-1/2 flex justify-center">
-            <!-- Vehicle image placeholder with drop shadow -->
-            <div class="bg-neutral-200 rounded-lg w-full max-w-md h-[300px] md:h-[400px] flex items-center justify-center shadow-lg">
-                <img src="/assets/electric-rickshaw.jpg" alt="NovaRyd Electric Auto-Rickshaw" class="w-full h-full object-cover rounded-lg" width="500" height="400" loading="lazy">
+            <!-- Vehicle image with drop shadow -->
+            <div class="w-full max-w-md shadow-lg">
+                <img src="/assets/AutoRickshaw_Image.png" alt="NovaRyd Electric Auto-Rickshaw" class="w-full h-auto object-cover rounded-lg" width="500" height="400" loading="lazy">
             </div>
         </div>
     </section>
@@ -344,9 +344,9 @@
         <div class="container mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-6 md:mb-0">
-                    <!-- Logo placeholder -->
-                    <div class="h-[40px] w-[160px] bg-neutral-700 flex items-center justify-center rounded mb-4">
-                        <img src="/assets/novaryd-logo-white.svg" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                    <!-- Logo in footer -->
+                    <div class="mb-4">
+                        <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
                     </div>
                     <p class="text-sm text-gray-400">Low-cost, all-electric mobility for a greener Mumbai</p>
                 </div>
