Update team members, add app coming soon page, update contact email

--- a/about.html
+++ b/about.html
@@ -150,8 +150,8 @@
             <h2 class="text-3xl font-bold mb-8 text-center">Our Founding Story</h2>
             <div class="bg-white p-8 rounded-lg shadow-sm">
                 <p class="mb-4">NovaRyd was born from a simple observation: Mumbai's iconic auto-rickshaws, while culturally significant and practically useful, contribute significantly to the city's air pollution and offer an inconsistent experience for riders.</p>
-                <p class="mb-4">Our founders, a team of engineers and urban mobility experts, saw an opportunity to preserve this essential mode of transportation while addressing its environmental impact. In 2023, they launched NovaRyd with a fleet of 10 electric auto-rickshaws.</p>
-                <p>The response was overwhelmingly positive. Riders appreciated the fixed fares, clean vehicles, and reliable service. Drivers enjoyed better working conditions and stable income. Advertisers valued the mobile advertising platform. And most importantly, each ride represented a small but meaningful reduction in Mumbai's air pollution.</p>
+                <p class="mb-4">Our founders, a team of engineers, saw an opportunity to preserve this essential mode of transportation while addressing its environmental impact. In 2025, they will be launching NovaRyd with a fleet of electric auto-rickshaws.</p>
+                <p>The response is expected to be overwhelmingly positive. Riders will appreciate the fixed fares, clean vehicles, and reliable service. Drivers will enjoy better working conditions and stable income. Advertisers will valued the mobile advertising platform. And most importantly, each ride represents a small but meaningful reduction in Mumbai's air pollution.</p>
             </div>
         </div>
     </section>
@@ -163,13 +163,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Team Member 1 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
-                    <div class="bg-neutral-200 h-48 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-24 w-24 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
+                    <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
+                        <img src="/assets/Pavan Pal.png" alt="Pavan Pal - Co-Founder & CEO" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-1">Pavan Jhawar</h3>
+                        <h3 class="text-xl font-bold mb-1">Pavan Pal</h3>
                         <p class="text-gray-600 mb-3">Co-Founder & CEO</p>
                         <p class="text-sm">Passionate about sustainable urban mobility and creating positive social impact through technology.</p>
                     </div>
@@ -177,13 +175,11 @@
                 
                 <!-- Team Member 2 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
-                    <div class="bg-neutral-200 h-48 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-24 w-24 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
+                    <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
+                        <img src="/assets/Madhavan Sivakumaran.png" alt="Madhavan Sivakumaran - Co-Founder & CTO" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-1">Keshav Jhawar</h3>
+                        <h3 class="text-xl font-bold mb-1">Madhavan Sivakumaran</h3>
                         <p class="text-gray-600 mb-3">Co-Founder & CTO</p>
                         <p class="text-sm">Leading the technological innovation behind NovaRyd's electric fleet and mobile application.</p>
                     </div>
@@ -197,7 +193,7 @@
                         </svg>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-1">Ananya Sharma</h3>
+                        <h3 class="text-xl font-bold mb-1">Keshav Jhawar</h3>
                         <p class="text-gray-600 mb-3">Head of Operations</p>
                         <p class="text-sm">Ensuring smooth day-to-day operations and exceptional service quality across the NovaRyd fleet.</p>
                     </div>
@@ -234,10 +230,10 @@
             <h2 class="text-3xl font-bold mb-6">Join the NovaRyd Movement</h2>
             <p class="text-xl mb-8 max-w-3xl mx-auto">Whether you're a rider, driver, advertiser, or investor, there's a place for you in our clean mobility revolution.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="index.html#download-app" class="bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
+                <a href="app-coming-soon.html" class="bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
                     Download the App
                 </a>
-                <a href="mailto:info@novaryd.com" class="border-2 border-novaryd-green text-novaryd-green hover:bg-novaryd-green hover:text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
+                <a href="mailto:pavan@novaryd.com" class="border-2 border-novaryd-green text-novaryd-green hover:bg-novaryd-green hover:text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
                     Contact Us
                 </a>
             </div>
@@ -281,7 +277,7 @@
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms & Conditions</a>
-                        <a href="mailto:info@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
+                        <a href="mailto:pavan@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
                     </div>
                 </div>
             </div>
