--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <p class="text-xl mb-8">Low-cost, all-electric mobility that cleans the air and uplifts communities.</p>
             
             <div class="flex flex-col sm:flex-row gap-4">
-                <a href="#download-app" class="bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
+                <a href="app-coming-soon.html" class="bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
                     Book a Ryd 
                 </a>
                 <a href="#advertisers" class="border-2 border-novaryd-green text-novaryd-green hover:bg-novaryd-green hover:text-white font-medium py-3 px-6 rounded-lg transition duration-300 text-center">
@@ -315,7 +315,7 @@
           Be one of the first 100 riders or advertisers and get an exclusive launch perk.
           Drop your email and we'll let you know the moment we launch.
         </p>
-        <a href="mailto:info@novaryd.com?subject=Early Access"
+        <a href="mailto:pavan@novaryd.com?subject=Early Access"
            class="inline-block bg-[#1DB954] text-white font-semibold py-3 px-6 rounded-full shadow hover:scale-105 transition">
            Join the Early-Access List
         </a>
@@ -330,10 +330,10 @@
                     <h2 class="text-3xl font-bold mb-4">Download the NovaRyd App</h2>
                     <p class="mb-6">Experience hassle-free, eco-friendly rides at a flat rate. Available for iOS and Android.</p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center sm:justify-start">
-                        <a href="#" aria-label="Download on the App Store" class="transition duration-300 hover:opacity-80">
+                        <a href="app-coming-soon.html" aria-label="Download on the App Store" class="transition duration-300 hover:opacity-80">
                             <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-12 w-auto" width="120" height="40">
                         </a>
-                        <a href="#" aria-label="Get it on Google Play" class="transition duration-300 hover:opacity-80">
+                        <a href="app-coming-soon.html" aria-label="Get it on Google Play" class="transition duration-300 hover:opacity-80">
                             <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-12 w-auto" width="135" height="40">
                         </a>
                     </div>
@@ -394,7 +394,7 @@
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms & Conditions</a>
-                        <a href="mailto:info@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
+                        <a href="mailto:pavan@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
                     </div>
                 </div>
             </div>
