--- a/terms.html
+++ b/terms.html
@@ -197,7 +197,7 @@
                 
                 <h2 class="text-2xl font-bold mt-8 mb-4">13. Contact Information</h2>
                 <p class="mb-6">If you have any questions or concerns about these Terms, please contact us at:</p>
-                <p class="mb-2">Email: legal@novaryd.com</p>
+                <p class="mb-2">Email: pavan@novaryd.com</p>
                 <p class="mb-2">Address: NovaRyd Private Ltd., Mumbai, Maharashtra, India</p>
             </div>
         </div>
@@ -240,7 +240,7 @@
                         <a href="about.html" class="hover:text-white transition duration-300">About Us</a>
                         <a href="privacy-policy.html" class="hover:text-white transition duration-300">Privacy Policy</a>
                         <a href="terms.html" class="hover:text-white transition duration-300">Terms & Conditions</a>
-                        <a href="mailto:info@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
+                        <a href="mailto:pavan@novaryd.com" class="hover:text-white transition duration-300">Contact</a>
                     </div>
                 </div>
             </div>
