Update website with enhancements: 1) Change nav bar to NovaRyd green with white text, 2) Center About page images, 3) Fix app store buttons, 4) Replace PNG images with optimized WEBP format, 5) Add Keshav Jhawar image

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -57,22 +57,22 @@
 </head>
 <body class="font-poppins text-slate-800 bg-neutral-100">
     <!-- Header/Navigation -->
-    <header class="bg-white shadow-sm sticky top-0 z-50">
+    <header class="bg-novaryd-green shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
                 </a>
                 
                 <nav class="hidden md:flex space-x-8">
-                    <a href="index.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">Home</a>
-                    <a href="about.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">About Us</a>
-                    <a href="index.html#advertisers" class="text-slate-800 hover:text-novaryd-green transition duration-300">Advertisers</a>
-                    <a href="index.html#download-app" class="text-slate-800 hover:text-novaryd-green transition duration-300">Download App</a>
+                    <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
+                    <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
+                    <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
                 
                 <div class="md:hidden">
-                    <button id="mobile-menu-button" class="text-slate-800 hover:text-novaryd-green transition duration-300">
+                    <button id="mobile-menu-button" class="text-white hover:text-white/80 transition duration-300">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                         </svg>
@@ -83,10 +83,10 @@
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4">
                 <nav class="flex flex-col space-y-4">
-                    <a href="index.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">Home</a>
-                    <a href="about.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">About Us</a>
-                    <a href="index.html#advertisers" class="text-slate-800 hover:text-novaryd-green transition duration-300">Advertisers</a>
-                    <a href="index.html#download-app" class="text-slate-800 hover:text-novaryd-green transition duration-300">Download App</a>
+                    <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
+                    <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
+                    <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
             </div>
         </div>
