--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
 </head>
 <body class="font-poppins text-slate-800 bg-neutral-100">
     <!-- Header/Navigation -->
-    <header class="bg-white shadow-sm sticky top-0 z-50">
+    <header class="bg-novaryd-green shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
                 </a>
                 
                 <nav class="hidden md:flex space-x-8">
-                    <a href="index.html" class="text-novaryd-green font-medium transition duration-300">Home</a>
-                    <a href="about.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">About Us</a>
-                    <a href="#advertisers" class="text-slate-800 hover:text-novaryd-green transition duration-300">Advertisers</a>
-                    <a href="#download-app" class="text-slate-800 hover:text-novaryd-green transition duration-300">Download App</a>
+                    <a href="index.html" class="text-white font-medium transition duration-300">Home</a>
+                    <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
+                    <a href="#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
                 
                 <div class="md:hidden">
-                    <button id="mobile-menu-button" class="text-slate-800 hover:text-novaryd-green transition duration-300">
+                    <button id="mobile-menu-button" class="text-white hover:text-white/80 transition duration-300">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                         </svg>
@@ -98,10 +98,10 @@
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4">
                 <nav class="flex flex-col space-y-4">
-                    <a href="index.html" class="text-novaryd-green font-medium transition duration-300">Home</a>
-                    <a href="about.html" class="text-slate-800 hover:text-novaryd-green transition duration-300">About Us</a>
-                    <a href="#advertisers" class="text-slate-800 hover:text-novaryd-green transition duration-300">Advertisers</a>
-                    <a href="#download-app" class="text-slate-800 hover:text-novaryd-green transition duration-300">Download App</a>
+                    <a href="index.html" class="text-white font-medium transition duration-300">Home</a>
+                    <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
+                    <a href="#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
             </div>
         </div>
@@ -131,7 +131,7 @@
         <div class="md:w-1/2 flex justify-center">
             <!-- Vehicle image with drop shadow -->
             <div class="w-full max-w-md shadow-lg">
-                <img src="/assets/AutoRickshaw_Image.png" alt="NovaRyd Electric Auto-Rickshaw" class="w-full h-auto object-cover rounded-lg" width="500" height="400" loading="lazy">
+                <img src="/assets/AutoRickshaw_Image.webp" alt="NovaRyd Electric Auto-Rickshaw" class="w-full h-full object-contain rounded-lg shadow-md" width="500" height="400" loading="lazy">
             </div>
         </div>
     </section>
@@ -139,7 +139,7 @@
     <!-- App Download Section -->
     <section id="download" class="py-16 bg-gray-50">
       <div class="container mx-auto flex flex-col lg:flex-row items-center gap-8 px-4">
-        <img src="/assets/App_Screenshot.png" alt="NovaRyd booking app screenshot"
+        <img src="/assets/App_Screenshot.webp" alt="NovaRyd booking app screenshot"
              class="w-72 rounded-2xl shadow-xl mx-auto lg:mx-0" />
         <div class="text-center lg:text-left">
           <h2 class="text-3xl font-bold mb-4">Book your ride in two taps</h2>
@@ -331,16 +331,16 @@
                     <p class="mb-6">Experience hassle-free, eco-friendly rides at a flat rate. Available for iOS and Android.</p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center sm:justify-start">
                         <a href="app-coming-soon.html" aria-label="Download on the App Store" class="transition duration-300 hover:opacity-80">
-                            <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-12 w-auto" width="120" height="40">
+                            <img src="/assets/appstore.svg" alt="Download on the App Store" class="h-11 w-auto" style="min-width: 140px;" width="140" height="44">
                         </a>
                         <a href="app-coming-soon.html" aria-label="Get it on Google Play" class="transition duration-300 hover:opacity-80">
-                            <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-12 w-auto" width="135" height="40">
+                            <img src="/assets/playstore.svg" alt="Get it on Google Play" class="h-11 w-auto" style="min-width: 140px;" width="140" height="44">
                         </a>
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
                     <div class="bg-neutral-200 rounded-lg w-[200px] h-[400px] flex items-center justify-center">
-                        <img src="/assets/App_Screenshot.png" alt="NovaRyd App Screenshot" class="w-full h-full object-cover rounded-lg" width="200" height="400" loading="lazy">
+                        <img src="/assets/App_Screenshot.webp" alt="NovaRyd App Screenshot" class="w-full h-full object-cover rounded-lg" width="200" height="400" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                 <div class="mb-6 md:mb-0">
                     <!-- Logo in footer -->
                     <div class="mb-4">
-                        <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                        <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
                     </div>
                     <p class="text-sm text-gray-400">Low-cost, all-electric mobility for a greener Mumbai</p>
                 </div>
