--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-14 w-auto max-w-[220px] filter drop-shadow-sm" width="220" height="56">
                 </a>
                 
                 <nav class="hidden md:flex space-x-8">
@@ -111,8 +111,8 @@
     <section id="hero" class="scroll-snap-section flex flex-col md:flex-row items-center justify-between px-6 md:px-16 py-12 md:py-0 bg-gradient-to-b from-[#f0fdf4] to-[#dcfce7]">
         <div class="md:w-1/2 mb-10 md:mb-0">
             <!-- Logo -->
-            <div class="mb-6">
-                <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[50px] w-auto" width="200" height="50">
+            <div class="mb-6 flex justify-center md:justify-start">
+                <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-auto w-[220px]" width="220" height="56">
             </div>
             
             <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Zero-Emission Rides for a Greener Mumbai</h1>
@@ -364,7 +364,7 @@
                 <div class="mb-6 md:mb-0">
                     <!-- Logo in footer -->
                     <div class="mb-4">
-                        <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                        <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-12 w-auto max-w-[180px]" width="180" height="48">
                     </div>
                     <p class="text-sm text-gray-400">Low-cost, all-electric mobility for a greener Mumbai</p>
                 </div>
