--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,7 +61,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                    <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-14 w-auto max-w-[220px] filter drop-shadow-sm" width="220" height="56">
                 </a>
                 
                 <nav class="hidden md:flex space-x-8">
@@ -191,7 +191,7 @@
                 <div class="mb-6 md:mb-0">
                     <!-- Logo in footer -->
                     <div class="mb-4">
-                        <img src="/assets/NovaRyd_Logo.png" alt="NovaRyd Logo" class="h-[40px] w-auto" width="160" height="40">
+                        <img src="/assets/NovaRyd_Logo.webp" alt="NovaRyd Logo" class="h-12 w-auto max-w-[180px]" width="180" height="48">
                     </div>
                     <p class="text-sm text-gray-400">Low-cost, all-electric mobility for a greener Mumbai</p>
                 </div>
