Fix Keshav Jhawar image display and update Madhavan Sivakumaran image

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                 <!-- Team Member 3 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
                     <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
-                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Head of Operations" class="w-auto h-auto object-cover mx-auto my-3" style="width: 300px; height: auto;">
+                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Head of Operations" class="w-auto h-auto object-contain mx-auto my-3" style="width: 280px; height: auto; object-position: center;">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">Keshav Jhawar</h3>
