--- a/about.html
+++ b/about.html
@@ -163,8 +163,8 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Team Member 1 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
-                    <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
-                        <img src="/assets/Pavan Pal.webp" alt="Pavan Pal - Co-Founder & CEO" class="w-auto h-auto object-cover mx-auto my-3" style="width: 300px; height: auto;">
+                    <div class="bg-neutral-200 h-56 flex items-center justify-center overflow-hidden">
+                        <img src="/assets/Pavan Pal.webp" alt="Pavan Pal - Co-Founder & CEO" class="w-auto h-auto object-contain mx-auto" style="max-width: 90%; max-height: 100%;">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">Pavan Pal</h3>
@@ -175,8 +175,8 @@
                 
                 <!-- Team Member 2 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
-                    <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
-                        <img src="/assets/Madhavan Sivakumaran.webp" alt="Madhavan Sivakumaran - Co-Founder & CTO" class="w-auto h-auto object-cover mx-auto my-3" style="width: 300px; height: auto;">
+                    <div class="bg-neutral-200 h-56 flex items-center justify-center overflow-hidden">
+                        <img src="/assets/Madhavan Sivakumaran.webp" alt="Madhavan Sivakumaran - Co-Founder & CTO" class="w-auto h-auto object-contain mx-auto" style="max-width: 90%; max-height: 100%;">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">Madhavan Sivakumaran</h3>
@@ -187,8 +187,8 @@
                 
                 <!-- Team Member 3 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
-                    <div class="bg-neutral-200 h-48 flex items-center justify-center overflow-hidden">
-                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Head of Operations" class="w-auto h-auto object-contain mx-auto my-3" style="width: 280px; height: auto; object-position: center;">
+                    <div class="bg-neutral-200 h-56 flex items-center justify-center overflow-hidden">
+                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Head of Operations" class="w-auto h-auto object-contain mx-auto" style="max-width: 90%; max-height: 100%;">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">Keshav Jhawar</h3>
