Update app screenshots and media kit link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- App Download Section -->
     <section id="download" class="py-16 bg-gray-50">
       <div class="container mx-auto flex flex-col lg:flex-row items-center gap-8 px-4">
-        <img src="/assets/App_Screenshot.webp" alt="NovaRyd booking app screenshot"
+        <img src="/assets/App_Screenshot_HomePage.webp" alt="NovaRyd booking app screenshot"
              class="w-72 rounded-2xl shadow-xl mx-auto lg:mx-0" />
         <div class="text-center lg:text-left">
           <h2 class="text-3xl font-bold mb-4">Book your ride in two taps</h2>
@@ -297,7 +297,7 @@
             </div>
             
             <div class="text-center">
-                <a href="#" class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
+                <a href="/assets/NovaRyd Brochure.pdf" class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
                     </svg>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center">
                     <div class="bg-neutral-200 rounded-lg w-[200px] h-[400px] flex items-center justify-center">
-                        <img src="/assets/App_Screenshot.webp" alt="NovaRyd App Screenshot" class="w-full h-full object-cover rounded-lg" width="200" height="400" loading="lazy">
+                        <img src="/assets/App_Screenshot_Searching.webp" alt="NovaRyd App Screenshot" class="w-full h-full object-cover rounded-lg" width="200" height="400" loading="lazy">
                     </div>
                 </div>
             </div>
