Update media kit link to force download and update asset files

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             
             <div class="text-center">
-                <a href="/assets/NovaRyd Brochure.pdf" class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
+                <a href="/assets/NovaRyd Brochure.pdf" download class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
                     </svg>
