--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- Impact Metrics Section -->
     <section class="py-16 px-6 md:px-16 bg-white">
         <div class="container mx-auto">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Our Impact</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Our Projected Impact</h2>
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Metric 1 -->
@@ -297,7 +297,7 @@
             </div>
             
             <div class="text-center">
-                <a href="/assets/NovaRyd Brochure.pdf" download class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
+                <a href="/assets/NovaRyd Brochure.pdf" download="NovaRyd_Media_Kit.pdf" class="inline-flex items-center bg-novaryd-green hover:bg-novaryd-dark-green text-white font-medium py-3 px-6 rounded-lg transition duration-300">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
                     </svg>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center">
                     <div class="bg-neutral-200 rounded-lg w-[200px] h-[400px] flex items-center justify-center">
-                        <img src="/assets/App_Screenshot_Searching.webp" alt="NovaRyd App Screenshot" class="w-full h-full object-cover rounded-lg" width="200" height="400" loading="lazy">
+                        <img src="/assets/App_Screenshot_Searching.webp" alt="NovaRyd App Screenshot" class="w-full h-full object-contain rounded-lg" width="200" height="400" loading="lazy">
                     </div>
                 </div>
             </div>
