--- a/about.html
+++ b/about.html
@@ -188,11 +188,11 @@
                 <!-- Team Member 3 -->
                 <div class="bg-neutral-100 rounded-lg overflow-hidden text-center">
                     <div class="bg-neutral-200 h-56 flex items-center justify-center overflow-hidden">
-                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Head of Operations" class="w-auto h-auto object-contain mx-auto" style="max-width: 90%; max-height: 100%;">
+                        <img src="/assets/Keshav Jhawar.webp" alt="Keshav Jhawar - Co-Founder & COO" class="w-auto h-auto object-contain mx-auto" style="max-width: 90%; max-height: 100%;">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">Keshav Jhawar</h3>
-                        <p class="text-gray-600 mb-3">Head of Operations</p>
+                        <p class="text-gray-600 mb-3">Co-Founder & COO</p>
                         <p class="text-sm">Ensuring smooth day-to-day operations and exceptional service quality across the NovaRyd fleet.</p>
                     </div>
                 </div>
