Update website: Replace logo with NovaRyd2-1.webp, update Keshav's role to Co-Founder & COO, and fix Google Play Store icon

--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
             <h2 class="text-3xl font-bold mb-8 text-center">Our Founding Story</h2>
             <div class="bg-white p-8 rounded-lg shadow-sm">
                 <p class="mb-4">NovaRyd was born from a simple observation: Mumbai's iconic auto-rickshaws, while culturally significant and practically useful, contribute significantly to the city's air pollution and offer an inconsistent experience for riders.</p>
-                <p class="mb-4">Our founders, a team of engineers, saw an opportunity to preserve this essential mode of transportation while addressing its environmental impact. In 2025, they will be launching NovaRyd with a fleet of electric auto-rickshaws.</p>
+                <p class="mb-4">Our founders, a team of engineers and behavioural scientists, saw an opportunity to preserve this essential mode of transportation while addressing its environmental impact. In 2025, they will be launching NovaRyd with a fleet of electric auto-rickshaws.</p>
                 <p>The response is expected to be overwhelmingly positive. Riders will appreciate the fixed fares, clean vehicles, and reliable service. Drivers will enjoy better working conditions and stable income. Advertisers will valued the mobile advertising platform. And most importantly, each ride represents a small but meaningful reduction in Mumbai's air pollution.</p>
             </div>
         </div>
