--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
           <p class="mb-6 max-w-md">Skip the haggle and breathe clean—download NovaRyd for instant, fixed-fare rides.</p>
           <div class="flex justify-center lg:justify-start gap-4">
             <a href="#" aria-label="Download on the App Store">
-              <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-12">
+              <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-12 w-auto" style="width: 140px; height: auto;">
             </a>
             <a href="#" aria-label="Get it on Google Play">
-              <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-12">
+              <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-12 w-auto" style="width: 140px; height: auto;">
             </a>
           </div>
         </div>
