--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
           <h2 class="text-3xl font-bold mb-4">Book your ride in two taps</h2>
           <p class="mb-6 max-w-md">Skip the haggle and breathe clean—download NovaRyd for instant, fixed-fare rides.</p>
           <div class="flex justify-center lg:justify-start gap-4">
-            <a href="#" aria-label="Download on the App Store">
-              <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-12 w-auto" style="width: 140px; height: auto;">
+            <a href="#" aria-label="Download on the App Store" class="inline-block">
+              <img src="/assets/appstore.svg" alt="Apple App Store badge" class="h-auto w-36">
             </a>
-            <a href="#" aria-label="Get it on Google Play">
-              <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-12 w-auto" style="width: 140px; height: auto;">
+            <a href="#" aria-label="Get it on Google Play" class="inline-block">
+              <img src="/assets/playstore.svg" alt="Google Play Store badge" class="h-auto w-36">
             </a>
           </div>
         </div>
