Add rounded corners to logo for a more friendly and aesthetic appearance

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="md:w-1/2 mb-10 md:mb-0">
             <!-- Logo -->
             <div class="mb-6 flex justify-center md:justify-start">
-                <img src="/assets/NovaRyd2-1.webp" alt="NovaRyd Logo" class="h-auto w-[220px]" width="220" height="56">
+                <img src="/assets/NovaRyd2-1.webp" alt="NovaRyd Logo" class="h-auto w-[220px] rounded-lg" width="220" height="56">
             </div>
             
             <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Zero-Emission Rides for a Greener Mumbai</h1>
