Further increase app store icon sizes to match reference design

--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
                     <p class="mb-6">Experience hassle-free, eco-friendly rides at a flat rate. Available for iOS and Android.</p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center sm:justify-start">
                         <a href="app-coming-soon.html" aria-label="Download on the App Store" class="transition duration-300 hover:opacity-80">
-                            <img src="/assets/appstore.svg" alt="Download on the App Store" class="h-16 w-auto" style="min-width: 180px;" width="180" height="60">
+                            <img src="/assets/appstore.svg" alt="Download on the App Store" class="w-48 h-auto" width="192" height="64">
                         </a>
                         <a href="app-coming-soon.html" aria-label="Get it on Google Play" class="transition duration-300 hover:opacity-80">
-                            <img src="/assets/playstore.svg" alt="Get it on Google Play" class="h-16 w-auto" style="min-width: 180px;" width="180" height="60">
+                            <img src="/assets/playstore.svg" alt="Get it on Google Play" class="w-48 h-auto" width="192" height="64">
                         </a>
                     </div>
                 </div>
