--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <a href="index.html" class="text-white font-medium transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                     <a href="careers.html" class="text-white hover:underline font-medium transition duration-300 ml-8">Careers</a>
                     <a href="#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
                 
@@ -101,6 +102,7 @@
                     <a href="index.html" class="text-white font-medium transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                     <a href="careers.html" class="text-white hover:underline font-medium transition duration-300 ml-8">Careers</a>
                     <a href="#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
             </div>
