feat: rewrite privacy policy content per legal update

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -93,7 +93,111 @@
     </header>
     
     <!-- Privacy Policy Content -->
-    <section class="py-16 px-6 md:px-16 bg-white">
+<main>
+  <h1 class="text-3xl font-bold mb-4">Privacy Policy</h1>
+  <p class="text-sm text-gray-500 mb-8">Last updated: August 7, 2025</p>
+
+  <h2 class="text-xl font-semibold mb-3">1. Our Commitment to Your Privacy</h2>
+  <p class="mb-4">
+    NovaRyd respects your privacy and is committed to protecting it. We never publish, sell, or rent your personal data to third parties without your explicit consent. By visiting or using any service under the novaryd.com domain or its sub-domains you accept the practices described in this policy. If you do not agree, please discontinue use of our site and apps.
+  </p>
+  <p class="mb-6">
+    This policy does not cover websites or services operated by companies we do not control. Always review the privacy statements of any third-party site you visit through our links.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">2. Privacy Guarantee</h2>
+  <p class="mb-4">
+    We do not sell or rent your personal information for marketing purposes without your consent. We may disclose aggregated statistics&nbsp;&mdash;&nbsp;for example, total rider counts&nbsp;&mdash;&nbsp;but never data that identifies you. Access to personal data inside NovaRyd is restricted to authorised personnel who need it to perform their duties and are bound by confidentiality and disciplinary rules.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">3. Information We Collect</h2>
+  <h3 class="font-medium mt-4 mb-2">3.1 Information You Provide</h3>
+  <ul class="list-disc list-inside mb-4">
+    <li>Name, email address, and phone number</li>
+    <li>Billing and payment details</li>
+    <li>Profile preferences and communication records</li>
+    <li>Location data when you choose to share it</li>
+  </ul>
+  <h3 class="font-medium mt-4 mb-2">3.2 Information Collected Automatically</h3>
+  <ul class="list-disc list-inside mb-6">
+    <li>Device type, operating system, and browser</li>
+    <li>IP address, log files, and usage analytics</li>
+    <li>Cookies and similar tracking technologies (see Section 4)</li>
+  </ul>
+  <p class="mb-6">
+    You disclose personal information voluntarily. We also use your IP address to diagnose server issues, administer the site, and compile broad demographic insights.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">4. Cookie Policy</h2>
+  <p class="mb-4">
+    Cookies help us remember your preferences, measure promotional effectiveness, and improve site performance. You may refuse cookies in your browser settings, although certain features may then be unavailable. Our cookies fall into four groups:
+  </p>
+  <ul class="list-disc list-inside mb-4">
+    <li><strong>Essential</strong> &ndash; required for core functionality</li>
+    <li><strong>Functional</strong> &ndash; remember your settings</li>
+    <li><strong>Analytics</strong> &ndash; help us understand site usage (e.g., Google Analytics)</li>
+    <li><strong>Advertising</strong> &ndash; show relevant ads together with trusted partners</li>
+  </ul>
+  <p class="mb-6">
+    All third-party cookies are limited to vetted partners, and you can delete or block them at any time via your browser’s privacy controls.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">5. How We Use Your Information</h2>
+  <ul class="list-disc list-inside mb-6">
+    <li>Process and fulfil bookings</li>
+    <li>Operate, maintain, and improve our services</li>
+    <li>Communicate with you about your account and rides</li>
+    <li>Send marketing messages when you opt in</li>
+    <li>Personalise content and promotions</li>
+    <li>Detect and prevent fraud or misuse</li>
+    <li>Comply with legal obligations</li>
+  </ul>
+
+  <h2 class="text-xl font-semibold mb-3">6. When We Share Your Information</h2>
+  <p class="mb-6">
+    We share personal data only when necessary:
+  </p>
+  <ul class="list-disc list-inside mb-6">
+    <li>With service providers such as payment processors and analytics vendors</li>
+    <li>With drivers to complete your ride requests</li>
+    <li>With business partners, but only when you have consented</li>
+    <li>To comply with law or protect rights, safety, and property</li>
+    <li>As part of a merger, acquisition, or asset sale</li>
+  </ul>
+
+  <h2 class="text-xl font-semibold mb-3">7. Your Rights and Choices</h2>
+  <p class="mb-4">
+    You may access, correct, or delete personal data, opt out of marketing, manage cookie preferences, and control location sharing in your device settings. Contact us any time at <a href="mailto:pavan@novaryd.com" class="underline">pavan@novaryd.com</a>.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">8. Data Security</h2>
+  <p class="mb-6">
+    We use physical, electronic, and managerial safeguards to protect personal information. No system is completely secure, but we continually review and enhance our security measures.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">9. Data Retention</h2>
+  <p class="mb-6">
+    We retain personal information only as long as needed for the purposes described or as required by law.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">10. Children’s Privacy</h2>
+  <p class="mb-6">
+    Our services are not directed to persons under 18. If you believe a child has provided us personal data, please contact us so we can delete it.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">11. Changes to This Policy</h2>
+  <p class="mb-6">
+    We may update this Privacy Policy periodically. Material changes will be notified through the website or app. Continued use of our services after an update indicates acceptance.
+  </p>
+
+  <h2 class="text-xl font-semibold mb-3">12. Contact Us</h2>
+  <address class="not-italic mb-6">
+    NovaRyd Private Ltd.<br>
+    Mumbai, Maharashtra, India<br>
+    Email – <a href="mailto:pavan@novaryd.com" class="underline">pavan@novaryd.com</a>
+  </address>
+</main>
+    <section class="py-16 px-6 md:px-16 bg-white hidden">
         <div class="container mx-auto max-w-4xl">
             <h1 class="text-3xl md:text-4xl font-bold mb-8">Privacy Policy</h1>
             <p class="text-gray-500 mb-8">Last Updated: May 29, 2025</p>
