fix: restore container margins on privacy policy page

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -93,7 +93,8 @@
     </header>
     
     <!-- Privacy Policy Content -->
-<main>
+<section class="py-16 px-6 md:px-16 bg-white">
+  <div class="container mx-auto max-w-4xl">
   <h1 class="text-3xl font-bold mb-4">Privacy Policy</h1>
   <p class="text-sm text-gray-500 mb-8">Last updated: August 7, 2025</p>
 
@@ -196,7 +197,8 @@
     Mumbai, Maharashtra, India<br>
     Email – <a href="mailto:pavan@novaryd.com" class="underline">pavan@novaryd.com</a>
   </address>
-</main>
+  </div>
+</section>
     <section class="py-16 px-6 md:px-16 bg-white hidden">
         <div class="container mx-auto max-w-4xl">
             <h1 class="text-3xl md:text-4xl font-bold mb-8">Privacy Policy</h1>
