fix(nav): display Careers link on all pages and align hover style

--- a/careers.html
+++ b/careers.html
@@ -49,7 +49,7 @@
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
-                    <a href="careers.html" class="text-white font-medium transition duration-300 underline">Careers</a>
+                    <a href="careers.html" class="text-white font-medium transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
                 <div class="md:hidden">
@@ -64,7 +64,7 @@
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
-                    <a href="careers.html" class="text-white font-medium transition duration-300 underline">Careers</a>
+                    <a href="careers.html" class="text-white font-medium transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
             </div>
