--- a/app-coming-soon.html
+++ b/app-coming-soon.html
@@ -54,6 +54,7 @@
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="careers.html" class="text-white hover:text-white/80 transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
                 
@@ -72,6 +73,7 @@
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
                     <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="careers.html" class="text-white hover:text-white/80 transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
             </div>
