feat(careers): replace job listings with three intern roles

--- a/careers.html
+++ b/careers.html
@@ -83,28 +83,40 @@
     <section id="job-listings" class="py-16">
         <div class="max-w-6xl mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Operations Manager Card -->
+                <!-- Marketing & Communications Intern Card -->
                 <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
-                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Operations Manager</h2>
-                    <p class="text-sm text-[#6b7280] mb-4">Mumbai • Full-time</p>
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Marketing &amp; Communications Intern</h2>
+                    <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai visits</p>
                     <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
-                        <li>Lead daily fleet and driver operations</li>
-                        <li>Coordinate maintenance &amp; charging logistics</li>
-                        <li>Analyse data to improve service reliability</li>
+                        <li>Own our social channels: plan content calendars, schedule posts, track engagement KPIs</li>
+                        <li>Write punchy, rider-centric copy for web, email, blogs, ads &amp; push notifications</li>
+                        <li>Design and launch low-budget growth experiments; analyse funnel metrics and iterate</li>
                     </ul>
-                    <a href="mailto:careers@novaryd.com?subject=Operations%20Manager%20Application" class="inline-block px-5 py-2 bg-novaryd-green hover:bg-novaryd-dark-green text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-novaryd-green" aria-label="Apply for Operations Manager">Apply Now →</a>
+                    <a href="mailto:keshav@novaryd.com?subject=Marketing%20%26%20Communications%20Intern%20Application" class="inline-block px-5 py-2 bg-novaryd-green hover:bg-novaryd-dark-green text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-novaryd-green" aria-label="Apply for Marketing &amp; Communications Intern">Apply Now →</a>
                 </div>
 
-                <!-- Marketing Specialist Card -->
+                <!-- Operations & Strategy Intern Card -->
                 <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
-                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Marketing Specialist</h2>
-                    <p class="text-sm text-[#6b7280] mb-4">Remote • Full-time</p>
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Operations &amp; Strategy Intern</h2>
+                    <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai field trips</p>
                     <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
-                        <li>Plan and execute rider acquisition campaigns</li>
-                        <li>Manage social media &amp; content calendar</li>
-                        <li>Track KPIs and optimise marketing spend</li>
+                        <li>Coordinate daily pilot ops: fleet dispatch, charging logistics &amp; first-line rider/driver support</li>
+                        <li>Map workflows, spot bottlenecks &amp; draft/iterate SOPs to boost speed, quality &amp; cost efficiency</li>
+                        <li>Build quick-turn financial and capacity models; prepare concise weekly and investor-update briefs</li>
                     </ul>
-                    <a href="mailto:careers@novaryd.com?subject=Marketing%20Specialist%20Application" class="inline-block px-5 py-2 bg-novaryd-green hover:bg-novaryd-dark-green text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-novaryd-green" aria-label="Apply for Marketing Specialist">Apply Now →</a>
+                    <a href="mailto:keshav@novaryd.com?subject=Operations%20%26%20Strategy%20Intern%20Application" class="inline-block px-5 py-2 bg-novaryd-green hover:bg-novaryd-dark-green text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-novaryd-green" aria-label="Apply for Operations &amp; Strategy Intern">Apply Now →</a>
+                </div>
+
+                <!-- Product & Tech Intern Card -->
+                <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Product &amp; Tech Intern</h2>
+                    <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai testing visits</p>
+                    <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
+                        <li>Monitor live Android/iOS builds; triage crashes, enforce CI/CD pipelines and secure-coding standards</li>
+                        <li>Ship new features in Flutter/Dart (front-end &amp; back-end) and maintain unit, widget &amp; E2E tests</li>
+                        <li>Instrument analytics, integrate GPS/IP-camera hardware and turn usage data into product insights</li>
+                    </ul>
+                    <a href="mailto:keshav@novaryd.com?subject=Product%20%26%20Tech%20Intern%20Application" class="inline-block px-5 py-2 bg-novaryd-green hover:bg-novaryd-dark-green text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-novaryd-green" aria-label="Apply for Product &amp; Tech Intern">Apply Now →</a>
                 </div>
             </div>
         </div>
