feat(careers): link job titles to PDF descriptions

--- a/careers.html
+++ b/careers.html
@@ -85,7 +85,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- Marketing & Communications Intern Card -->
                 <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
-                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Marketing &amp; Communications Intern</h2>
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2"><a href="assets/Marketing%20%26%20Communications%20Intern%20Job%20Description.pdf" target="_blank" class="hover:underline">Marketing &amp; Communications Intern</a></h2>
                     <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai visits</p>
                     <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
                         <li>Own our social channels: plan content calendars, schedule posts, track engagement KPIs</li>
@@ -97,7 +97,7 @@
 
                 <!-- Operations & Strategy Intern Card -->
                 <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
-                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Operations &amp; Strategy Intern</h2>
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2"><a href="assets/Operations%20%26%20Strategy%20Internship%20Job%20Description.pdf" target="_blank" class="hover:underline">Operations &amp; Strategy Intern</a></h2>
                     <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai field trips</p>
                     <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
                         <li>Coordinate daily pilot ops: fleet dispatch, charging logistics &amp; first-line rider/driver support</li>
@@ -109,7 +109,7 @@
 
                 <!-- Product & Tech Intern Card -->
                 <div class="p-6 bg-white rounded-2xl shadow hover:shadow-lg transition">
-                    <h2 class="text-2xl font-semibold text-[#111827] mb-2">Product &amp; Tech Intern</h2>
+                    <h2 class="text-2xl font-semibold text-[#111827] mb-2"><a href="assets/Product%20%26%20Tech%20Internship%20Job%20Description.pdf" target="_blank" class="hover:underline">Product &amp; Tech Intern</a></h2>
                     <p class="text-sm text-[#6b7280] mb-4">Remote-first • Internship (3–6 months) | Mumbai testing visits</p>
                     <ul class="list-disc list-inside text-sm mb-4 text-[#4b5563]">
                         <li>Monitor live Android/iOS builds; triage crashes, enforce CI/CD pipelines and secure-coding standards</li>
