Move Advertisers section to dedicated page and update links

--- a/app-coming-soon.html
+++ b/app-coming-soon.html
@@ -53,7 +53,7 @@
                 <nav class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
-                    <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="advertisers.html" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
                     <a href="careers.html" class="text-white hover:text-white/80 transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
@@ -72,7 +72,7 @@
                 <nav class="flex flex-col space-y-4">
                     <a href="index.html" class="text-white hover:text-white/80 transition duration-300">Home</a>
                     <a href="about.html" class="text-white hover:text-white/80 transition duration-300">About Us</a>
-                    <a href="index.html#advertisers" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
+                    <a href="advertisers.html" class="text-white hover:text-white/80 transition duration-300">Advertisers</a>
                     <a href="careers.html" class="text-white hover:text-white/80 transition duration-300">Careers</a>
                     <a href="index.html#download-app" class="text-white hover:text-white/80 transition duration-300">Download App</a>
                 </nav>
